--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'MTSContainers'
-        repository: 'next-template'
+        repository: 'digital-dojo-engagement'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: 'azure-$(Build.BuildId)-dev'
