--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@opentelemetry/auto-instrumentations-node": "^0.31.2",
     "@opentelemetry/sdk-node": "^0.31.0",
     "next": "^12.2.5",
+    "next-themes": "^0.2.1",
     "prom-client": "^12.0.0",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
