change eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "avoidEscape": true,
+    "avoidEscape": 0,
     "allowTemplateLiterals": true
   }
 }
