resolve test errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,6 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "avoidEscape": 0,
-    "allowTemplateLiterals": true
+    "allowTemplateLiterals": 0
   }
 }
