--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/dom": "^8.2.0",
     "@testing-library/jest-dom": "^5.14.1",
