--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@opentelemetry/sdk-node": "^0.31.0",
     "next": "^12.2.5",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.8.0",
     "prom-client": "^12.0.0",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
