--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node postbuild/scrape.js && next dev",
     "build": "next build",
+    "postbuild": "node /postbuild/scrape.js",
     "start": "node -r ./tracing.js node_modules/next/dist/bin/next start",
     "test": "npm run lint && npm run test:e2e && npm run test:unit",
     "lint": "next lint",
@@ -24,9 +25,13 @@
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/auto-instrumentations-node": "^0.31.2",
     "@opentelemetry/sdk-node": "^0.31.0",
+    "axios": "^1.1.3",
+    "html-to-text": "^8.2.1",
     "install": "^0.13.0",
     "next": "^12.2.5",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.2.10",
+    "node-html-parser": "^6.1.1",
     "nodemailer": "^6.8.0",
     "npm": "^8.19.2",
     "prom-client": "^12.0.0",
