--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node ./postbuild/scrape.js && next dev",
+    "dev": "node scrape.js && next dev",
     "build": "next build",
-    "postbuild": "node ./postbuild/scrape.js",
+    "postbuild": "node scrape.js",
     "start": "node -r ./tracing.js node_modules/next/dist/bin/next start",
     "test": "npm run lint && npm run test:e2e && npm run test:unit",
     "lint": "next lint",
