--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "node scrape.js && next dev",
     "build": "next build && node ./scrape.js",
     "postbuild": "node ./scrape.js",
-    "start": "node -r ./tracing.js node_modules/next/dist/bin/next start",
+    "start": "node -r ./tracing.js node_modules/next/dist/bin/next start && node ./scrape.js",
     "test": "npm run lint && npm run test:e2e && npm run test:unit",
     "lint": "next lint",
     "cypress": "cypress open",
