--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node scrape.js && next dev",
-    "build": "next build && node ./scrape.js",
+    "dev": "next dev",
+    "build": "next build",
     "postbuild": "node ./scrape.js",
-    "start": "node -r ./tracing.js node_modules/next/dist/bin/next start && node ./scrape.js",
-    "poststart": "node ./scrape.js",
+    "start": "node -r ./tracing.js node_modules/next/dist/bin/next start",
     "test": "npm run lint && npm run test:e2e && npm run test:unit",
     "lint": "next lint",
     "cypress": "cypress open",
