--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/auto-instrumentations-node": "^0.31.2",
     "@opentelemetry/sdk-node": "^0.31.0",
+    "@zach.codes/react-calendar": "^0.3.1",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.6",
     "install": "^0.13.0",
     "next": "^12.2.5",
     "next-themes": "^0.2.1",
