--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node ./scrape/scrape.js && next dev",
-    "build": "node ./scrape/scrape.js && next build",
+    "build": "next build",
     "start": "node -r ./tracing.js node_modules/next/dist/bin/next start",
     "test": "npm run lint && npm run test:e2e && npm run test:unit",
     "lint": "next lint",
